labour/test/invalid/invalid_one_hold.labour
bouldering_wall "OneHoldWall": {
  routes [
    bouldering_route "single move": {
      grade: "4C",
      grid_base_point: { x: 0, y: 0 },
      holds ["0001"]
    }
  ],
  volumes [
    circle: {
      pos: { x: 50, y: 50 },
      depth: 10,
      radius: 30,
      front_holds [
        hold "0001": {
          pos: { x: 0, y: 0 },
          shape: "1",
          colours [ red ],
          start_hold: 1
        }
      ]
    }
  ]
}
